--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ scikit-learn==1.5.2
 scipy==1.14.1
 threadpoolctl==3.5.0
 Werkzeug==3.0.4
+keras==3.5.0
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
 gunicorn
