--- a/requirements.txt
+++ b/requirements.txt
@@ -33,16 +33,15 @@ requests==2.32.3
 rich==13.8.1
 scikit-learn==1.5.2
 scipy==1.14.1
-setuptools==75.1.0
 six==1.16.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.0.4
-wheel==0.44.0
 wrapt==1.16.0
