--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ scipy==1.14.1
 six==1.16.0
 tensorboard==2.16.1
 tensorboard-data-server==0.7.2
-# tensorflow==2.16.1
+tensorflow==2.16.1
 
 # tensorflow-intel==2.
 tensorflow-io-gcs-filesystem==0.31.0
