--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-ml-dtypes==0.3.1
+ml-dtypes==0.4.1
 namex==0.0.8
 numpy==1.26.4
 opt-einsum==3.3.0
@@ -31,13 +31,14 @@ protobuf==4.25.5
 Pygments==2.18.0
 requests==2.32.3
 rich==13.8.1
+scikeras==0.13.0
 scikit-learn==1.5.2
 scipy==1.14.1
 six==1.16.0
-tensorboard==2.16.1
+tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-# tensorflow-intel==2.
+tensorflow==2.17.0
+# tensorflow-intel==2.17.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
